2010-02-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* doc/imdoc2man: Bare single quotes at the beginning of a line
	need to be escaped in order to make roff happy.  Problem reported
	by Daniel Kobras.

	* magick/command.c (ImportImageCommand): Don't assign a pointer to
	static constant data into an array which uses heap allocated data.
	Avoids a "double free" error when using gm import -frame.  Patch
	by Daniel Kobras.

	* magick/color_lookup.c (QueryColorname): XPM does not support
	RGBA color syntax, but it does support RGB.  Patch by Daniel
	Kobras.

	* magick/blob.c (OpenBlob): Only form multi-part filename when
	required.

	* magick/display.c (MagickXDisplayImage): The display '-update'
	option was only working in conjunction with the '-delay' option
	with a delay setting of 2 or greater.  Problem reported by Sami
	Liedes.  Patch by Vincent MAUGE.  Resolves Debian bug ID 414779.

2010-02-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (OpenBlob): Only apply scene substitution to
	the filename if adjoin is false.

	* magick/constitute.c (WriteImage): If adjoin is true, then
	restore original filename specification since opening the blob
	modifies it.  Resolves Debian bug ID 552998.

	* magick/image.c (SetImageInfo): Don't check filename for scene
	substitution if adjoin is intentionally false.  This allows saving
	to file names which look like they contain a scene substitution
	pattern.

	* magick/command.c (MogrifyImage): Convolution failure results in
	a crash rather than an error report.  Resolves Debian bug ID
	539251.

2010-02-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/deprecate.c: The string constants LoadImageText,
	SaveImageText, LoadImagesText, and SaveImagesText should have been
	deprecated, rather than being entirely removed.

2010-01-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/Makefile.am (install-data-html): Make sure that only the
	necessary documentation files are installed.
