@@ -21,6 +21,15 @@
 </tr>
 </table>
 <p>
+2010-02-04  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> VisualMagick/bin/delegates.mgk: Sending output to "win:" now
+        sends output to Windows Picture and Fax Viewer (shimgvw.dll)
+        rather than gmdisplay.
+
+</UL>
+<p>
 2010-02-03  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
